--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "*.{js,jsx,ts,tsx}": "npm run lint:fix"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
