refactor(repository): change strategy from file type architecture to screaming architecture.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,18 @@
     "next/typescript",
     "prettier"
   ],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "semi": [
       "error",
