--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "http-status-codes": "^2.3.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
@@ -27,7 +28,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-toastify": "^10.0.6",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
@@ -36,6 +39,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
