--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voluntary-warehouse",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -35,6 +35,8 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@cspell/dict-ca": "^3.0.4",
+    "@cspell/dict-es-es": "^3.0.3",
     "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18",
