--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.5.0",
     "@cspell/dict-ca": "^3.0.4",
     "@cspell/dict-es-es": "^3.0.3",
     "@types/leaflet": "^1.9.14",
@@ -43,6 +44,8 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
+    "commitlint": "^19.5.0",
+    "conventional-changelog-atom": "^5.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
